Running CargoTracker on WLS on AKS with PostgreSQL
- Update jta-data-source data source definition to use jdbc
- Declare detail settings of SequenceGenerator for all model classes
- Add a hidden text on index.html with the project build version string for pipeline
- Update initial-data.sql to provide enough info for table initialization
- Create a pipeline to setup WLS on AKS, leveraging existing work
- Create a pipeline to update CargoTracker, build/deploy the latest image to a AKS cluster and validate the completion of the deployment

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -43,6 +43,9 @@
 				</h2>
 				<hr class="intro-divider" />
 			</div>
+			<div class="container text-muted">
+				<p><h:outputText value="#{messages.versionString}" /></p>
+			</div>
 		</div>
 	</div>
 </h:body>
